--- a/static/index.css
+++ b/static/index.css
@@ -69,11 +69,11 @@ hr {
   --green: #19a974;
   --light-green: #9eebcf;
   --navy: #001b44;
-  --dark-blue: #00449e;
-  --blue: #0077a9;
+  --dark-blue: #004a7f;
+  --blue: #1a73b2;
   --light-blue: #7faccc;
-  --lightest-blue: #cdecff;
-  --washed-blue: #f6fffe;
+  --lightest-blue: #c9e8ff;
+  --washed-blue: #f7fbff;
   --washed-green: #e8fdf5;
   --washed-yellow: #fffceb;
   --washed-red: #ffdfdf;
