More harmonious red and yellow

--- a/static/index.css
+++ b/static/index.css
@@ -53,10 +53,10 @@ hr {
   --white-0125: rgba(255,255,255,.0125);
 
   --dark-red: #e7040f;
-  --red: #ff4136;
+  --red: #fd151b;
   --light-red: #ff725c;
   --orange: #ff6300;
-  --gold: #ffb700;
+  --gold: #ffb30f;
   --yellow: #ffd700;
   --light-yellow: #fbf1a9;
   --purple: #5e2ca5;
