--- a/public/static/index.css
+++ b/public/static/index.css
@@ -1,366 +1,104 @@
-.cf:before,
-.cf:after {
-	content: " ";
-	display: table;
-}
-.cf:after {
-	clear: both;
-}
-.cf {
-	*zoom: 1;
-}
+.cf:before, .cf:after { content: " "; display: table; }
+.cf:after { clear: both; }
+.cf { *zoom: 1; }
 
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
-html {
-	line-height: 1.15;
-	-ms-text-size-adjust: 100%;
-	-webkit-text-size-adjust: 100%;
-}
-body {
-	margin: 0;
-	color: var(--near-black);
-}
-article,
-aside,
-footer,
-header,
-nav,
-section {
-	display: block;
-}
-h1 {
-	font-size: 2em;
-	margin: 0.67em 0;
-}
-figcaption,
-figure,
-main {
-	display: block;
-}
-figure {
-	margin: 1em 40px;
-}
-hr {
-	box-sizing: content-box;
-	height: 0;
-	overflow: visible;
-}
-pre {
-	font-family: monospace, monospace;
-	font-size: 1em;
-}
-a {
-	background-color: transparent;
-	-webkit-text-decoration-skip: objects;
-}
-abbr[title] {
-	border-bottom: none;
-	text-decoration: underline;
-	text-decoration: underline dotted;
-}
-b,
-strong {
-	font-weight: inherit;
-}
-b,
-strong {
-	font-weight: bold;
-}
-code,
-kbd,
-samp {
-	font-family: monospace, monospace;
-	font-size: 1em;
-}
-dfn {
-	font-style: italic;
-}
-mark {
-	background-color: #ff0;
-	color: #000;
-}
-small {
-	font-size: 80%;
-}
-sub,
-sup {
-	font-size: 75%;
-	line-height: 0;
-	position: relative;
-	vertical-align: baseline;
-}
-sub {
-	bottom: -0.25em;
-}
-sup {
-	top: -0.5em;
-}
-audio,
-video {
-	display: inline-block;
-}
-audio:not([controls]) {
-	display: none;
-	height: 0;
-}
-img {
-	border-style: none;
-}
-svg:not(:root) {
-	overflow: hidden;
-}
-button,
-input,
-optgroup,
-select,
-textarea {
-	font-family: sans-serif;
-	font-size: 100%;
-	line-height: 1.15;
-	margin: 0;
-}
-button,
-input {
-	overflow: visible;
-}
-button,
-select {
-	text-transform: none;
-}
-button,
-html [type="button"],
-[type="reset"],
-[type="submit"] {
-	-webkit-appearance: button;
-}
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner,
-button::-moz-focus-inner {
-	border-style: none;
-	padding: 0;
-}
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring,
-button:-moz-focusring {
-	outline: 1px dotted ButtonText;
-}
-fieldset {
-	padding: 0.35em 0.75em 0.625em;
-}
-legend {
-	box-sizing: border-box;
-	color: inherit;
-	display: table;
-	max-width: 100%;
-	padding: 0;
-	white-space: normal;
-}
-progress {
-	display: inline-block;
-	vertical-align: baseline;
-}
-textarea {
-	overflow: auto;
-}
-[type="checkbox"],
-[type="radio"] {
-	box-sizing: border-box;
-	padding: 0;
-}
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-	height: auto;
-}
-[type="search"] {
-	-webkit-appearance: textfield;
-	outline-offset: -2px;
-}
-[type="search"]::-webkit-search-cancel-button,
-[type="search"]::-webkit-search-decoration {
-	-webkit-appearance: none;
-}
-::-webkit-file-upload-button {
-	-webkit-appearance: button;
-	font: inherit;
-}
-details,
-menu {
-	display: block;
-}
-summary {
-	display: list-item;
-}
-canvas {
-	display: inline-block;
-}
-template {
-	display: none;
-}
-[hidden] {
-	display: none;
-}
-a,
-article,
-aside,
-blockquote,
-body,
-code,
-dd,
-div,
-dl,
-dt,
-fieldset,
-figcaption,
-figure,
-footer,
-form,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-header,
-html,
-input[type="email"],
-input[type="number"],
-input[type="password"],
-input[type="tel"],
-input[type="text"],
-input[type="url"],
-.border-box,
-legend,
-li,
-main,
-nav,
-ol,
-p,
-pre,
-section,
-table,
-td,
-textarea,
-th,
-tr,
-ul {
-	box-sizing: border-box;
-}
+html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0;color:var(--near-black)}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:0.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace, monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bold}code,kbd,samp{font-family:monospace, monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-0.25em}sup{top:-0.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type="button"],[type="reset"],[type="submit"]{-webkit-appearance:button}[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner,button::-moz-focus-inner{border-style:none;padding:0}[type="button"]:-moz-focusring,[type="reset"]:-moz-focusring,[type="submit"]:-moz-focusring,button:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:0.35em 0.75em 0.625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type="checkbox"],[type="radio"]{box-sizing:border-box;padding:0}[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{height:auto}[type="search"]{-webkit-appearance:textfield;outline-offset:-2px}[type="search"]::-webkit-search-cancel-button,[type="search"]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}a,article,aside,blockquote,body,code,dd,div,dl,dt,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,html,input[type="email"],input[type="number"],input[type="password"],input[type="tel"],input[type="text"],input[type="url"],.border-box,legend,li,main,nav,ol,p,pre,section,table,td,textarea,th,tr,ul{box-sizing:border-box}
 
 hr {
-	height: 2px;
-	border: 0;
-	color: var(--light-gray);
-	background-color: var(--light-gray);
+  height: 2px;
+  border: 0;
+  color: var(--light-gray);
+  background-color: var(--light-gray);
 }
 
 :root {
-	--black: #000;
-	--near-black: #1b1919;
-	--dark-gray: #353333;
-	--mid-gray: #575555;
-	--gray: #797777;
-	--silver: #9b9999;
-	--light-silver: #acaaaa;
-	--moon-gray: #cecccc;
-	--light-gray: #f0eeee;
-	--near-white: #f6f4f4;
-	--white: #fff;
+  --black: #000;
+  --near-black: #1b1919;
+  --dark-gray: #353333;
+  --mid-gray: #575555;
+  --gray: #797777;
+  --silver: #9b9999;
+  --light-silver: #acaaaa;
+  --moon-gray: #cecccc;
+  --light-gray: #f0eeee;
+  --near-white: #f6f4f4 ;
+  --white: #fff;
 
-	--transparent: transparent;
-	--black-90: rgba(27, 25, 25, 0.9);
-	--black-80: rgba(27, 25, 25, 0.8);
-	--black-70: rgba(27, 25, 25, 0.7);
-	--black-60: rgba(27, 25, 25, 0.6);
-	--black-50: rgba(27, 25, 25, 0.5);
-	--black-40: rgba(27, 25, 25, 0.4);
-	--black-30: rgba(27, 25, 25, 0.3);
-	--black-20: rgba(27, 25, 25, 0.2);
-	--black-10: rgba(27, 25, 25, 0.1);
-	--black-05: rgba(27, 25, 25, 0.05);
-	--black-025: rgba(27, 25, 25, 0.025);
-	--black-0125: rgba(27, 25, 25, 0.0125);
+  --transparent:transparent;
+  --black-90: rgba(27, 25, 25,.9);
+  --black-80: rgba(27, 25, 25,.8);
+  --black-70: rgba(27, 25, 25,.7);
+  --black-60: rgba(27, 25, 25,.6);
+  --black-50: rgba(27, 25, 25,.5);
+  --black-40: rgba(27, 25, 25,.4);
+  --black-30: rgba(27, 25, 25,.3);
+  --black-20: rgba(27, 25, 25,.2);
+  --black-10: rgba(27, 25, 25,.1);
+  --black-05: rgba(27, 25, 25,.05);
+  --black-025: rgba(27, 25, 25,.025);
+  --black-0125: rgba(27, 25, 25,.0125);
 
-	--white-90: rgba(255, 255, 255, 0.9);
-	--white-80: rgba(255, 255, 255, 0.8);
-	--white-70: rgba(255, 255, 255, 0.7);
-	--white-60: rgba(255, 255, 255, 0.6);
-	--white-50: rgba(255, 255, 255, 0.5);
-	--white-40: rgba(255, 255, 255, 0.4);
-	--white-30: rgba(255, 255, 255, 0.3);
-	--white-20: rgba(255, 255, 255, 0.2);
-	--white-10: rgba(255, 255, 255, 0.1);
-	--white-05: rgba(255, 255, 255, 0.05);
-	--white-025: rgba(255, 255, 255, 0.025);
-	--white-0125: rgba(255, 255, 255, 0.0125);
+  --white-90: rgba(255,255,255,.9);
+  --white-80: rgba(255,255,255,.8);
+  --white-70: rgba(255,255,255,.7);
+  --white-60: rgba(255,255,255,.6);
+  --white-50: rgba(255,255,255,.5);
+  --white-40: rgba(255,255,255,.4);
+  --white-30: rgba(255,255,255,.3);
+  --white-20: rgba(255,255,255,.2);
+  --white-10: rgba(255,255,255,.1);
+  --white-05: rgba(255,255,255,.05);
+  --white-025: rgba(255,255,255,.025);
+  --white-0125: rgba(255,255,255,.0125);
 
-	--dark-red: #e7040f;
-	--red: #fd151b;
-	--light-red: #ff725c;
-	--orange: #ff6300;
-	--gold: #ffb30f;
-	--yellow: #ffd700;
-	--light-yellow: #fbf1a9;
-	--purple: #5e2ca5;
-	--light-purple: #a463f2;
-	--dark-pink: #d5008f;
-	--hot-pink: #ff41b4;
-	--pink: #ff80cc;
-	--light-pink: #ffa3d7;
-	--dark-green: #137752;
-	--green: #19a974;
-	--light-green: #9eebcf;
-	--navy: #001b44;
-	--dark-blue: #004a7f;
-	--blue: #1a73b2;
-	--light-blue: #7faccc;
-	--lightest-blue: #c9e8ff;
-	--washed-blue: #f7fbff;
-	--washed-green: #e8fdf5;
-	--washed-yellow: #fffceb;
-	--washed-red: #ffdfdf;
+  --dark-red: #e7040f;
+  --red: #fd151b;
+  --light-red: #ff725c;
+  --orange: #ff6300;
+  --gold: #ffb30f;
+  --yellow: #ffd700;
+  --light-yellow: #fbf1a9;
+  --purple: #5e2ca5;
+  --light-purple: #a463f2;
+  --dark-pink: #d5008f;
+  --hot-pink:#ff41b4;
+  --pink: #ff80cc;
+  --light-pink: #ffa3d7;
+  --dark-green: #137752;
+  --green: #19a974;
+  --light-green: #9eebcf;
+  --navy: #001b44;
+  --dark-blue: #004a7f;
+  --blue: #1a73b2;
+  --light-blue: #7faccc;
+  --lightest-blue: #c9e8ff;
+  --washed-blue: #f7fbff;
+  --washed-green: #e8fdf5;
+  --washed-yellow: #fffceb;
+  --washed-red: #ffdfdf;
 
-	--spacing-none: 0;
-	--spacing-extra-small: 0.25rem;
-	--spacing-small: 0.5rem;
-	--spacing-medium: 1rem;
-	--spacing-large: 2rem;
-	--spacing-extra-large: 4rem;
-	--spacing-extra-extra-large: 8rem;
-	--spacing-extra-extra-extra-large: 16rem;
+  --spacing-none: 0;
+  --spacing-extra-small: .25rem;
+  --spacing-small: .5rem;
+  --spacing-medium: 1rem;
+  --spacing-large: 2rem;
+  --spacing-extra-large: 4rem;
+  --spacing-extra-extra-large: 8rem;
+  --spacing-extra-extra-extra-large: 16rem;
 }
 
 .with-divider + .with-divider:before {
-	content: "";
-	width: calc(100% - var(--spacing-medium) * 2);
-	margin: var(--spacing-large) var(--spacing-medium);
-	border-top: 0.125rem solid var(--light-gray);
+  content: '';
+  width: calc(100% - var(--spacing-medium)*2);
+  margin: var(--spacing-large) var(--spacing-medium);
+  border-top: .125rem solid var(--light-gray);
 }
 
 .bg-gradient-blue {
-	background: linear-gradient(
-		135deg,
-		#7faccc,
-		#81aece 5.79%,
-		#83b0d0 10.88%,
-		#87b3d4 15.63%,
-		#8bb7d8 20.37%,
-		#8fbbdc 25.46%,
-		#93bfe1 31.25%,
-		#98c3e5 38.08%,
-		#9bc6e9 46.3%,
-		#9ecaec 56.25%,
-		#a1ccef 68.29%,
-		#a2cdf0 82.75%,
-		#a3cef1
-	);
+  background:linear-gradient(135deg,#7faccc,#81aece 5.79%,#83b0d0 10.88%,#87b3d4 15.63%,#8bb7d8 20.37%,#8fbbdc 25.46%,#93bfe1 31.25%,#98c3e5 38.08%,#9bc6e9 46.3%,#9ecaec 56.25%,#a1ccef 68.29%,#a2cdf0 82.75%,#a3cef1);
 }
 
 .twitter-tweet {
-	width: 100% !important;
-}
-
-img {
-	max-width: 100%;
+  width: 100% !important;
 }
