--- a/public/static/index.css
+++ b/public/static/index.css
@@ -1,3 +1,17 @@
+* {
+	font-family: "Roboto", sans-serif;
+	color: black;
+}
+
+a {
+	color: inherit;
+}
+
+a:hover,
+a:hover * {
+	color: lightgrey;
+}
+
 .cf:before,
 .cf:after {
 	content: " ";
