--- a/public/static/index.css
+++ b/public/static/index.css
@@ -1,15 +1,11 @@
-* {
-	font-family: "Raleway", sans-serif;
-}
-
-a {
+/* a {
 	color: inherit;
-}
-
+} */
+/* 
 a:hover,
 a:hover * {
 	color: lightgrey;
-}
+} */
 
 .cf:before,
 .cf:after {
